--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -36,7 +36,7 @@ If you feel that displaying your profile info (image, name and bio) on your page
 
 ![Profile Page 5](/images/profile-page-5.png)
 
-The `hideProfile` query param must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://platform.tutoros.app/amyjones`, then your embed code should be changed to:
+The `hideProfile` query parameter must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://platform.tutoros.app/amyjones`, then your embed code should be changed to:
 
 ```javascript
 <iframe
@@ -55,7 +55,7 @@ Below are instructions on how to embed your code in some of the most common webs
 ### WordPress
 
 1. Log in to your WordPress dashboard and navigate to the page or post where you want to embed the code.
-2. Click the “+” icon to add a new block.
+2. Click the `+` icon to add a new block.
 3. Search for and select “Custom HTML”.
 4. Paste your iframe code into the Custom HTML block.
 5. Preview or update the page to confirm the embed displays correctly.
@@ -63,9 +63,9 @@ Below are instructions on how to embed your code in some of the most common webs
 ### Wix
 
 1. Log in to your Wix account and open your site in the Wix Editor.
-2. On the left side, click the “Add” (+)” button.
-3. From the menu, select “Embed” (or “Embed Code” or “Custom Embeds” depending on your Wix version).
-4. Choose “Custom Embeds” → “Embed a Widget” (Wix might name it slightly differently).
+2. On the left side, click the `Add (+)` button.
+3. From the menu, select `Embed` (or `Embed Code` or `Custom Embeds` depending on your Wix version).
+4. Choose `Custom Embed → Embed a Widget`.
 5. A box will appear on your page. Click inside it to open the HTML settings panel.
 6. Paste your iframe code into the provided field.
 7. Resize or position the box if needed.
@@ -74,21 +74,21 @@ Below are instructions on how to embed your code in some of the most common webs
 ### Squarespace
 
 1. Log in to Squarespace and navigate to the page or section where you want to embed the code.
-2. Click “Edit” on the page content area.
-3. Hover over where you want the iframe and click the “+” button to add a block.
-4. Select “Code” from the block options.
+2. Click `“`Edit`”` on the page content area.
+3. Hover over where you want the iframe and click the `+` button to add a block.
+4. Select `Code` from the block options.
 5. In the code block editor, paste your iframe code.
-6. (Optional) Uncheck “Display source” if you only want the result, not the raw code, to appear.
-7. Click “Apply”, then save or publish your page.
+6. (Optional) Uncheck `Display source` if you only want the result, not the raw code, to appear.
+7. Click `Apply`, then save or publish your page.
 
 **Note**: Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.
 
 ### Webflow
 
 1. Open your project in the Webflow Designer.
-2. In the Elements panel (on the left), scroll down and find the “Embed” element.
+2. In the Elements panel (on the left), scroll down and find the `Embed` element.
 3. Drag and drop the Embed element into the desired location on your page’s layout.
 4. In the Embed settings popup, paste your iframe code into the code editor field.
-5. Click “Save & Close.”
+5. Click `Save & Close.`
 6. Adjust the sizing or positioning of the element as needed.
 7. Preview or publish your site to confirm the embed is displayed correctly.
