--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -74,14 +74,14 @@ Below are instructions on how to embed your code in some of the most common webs
 ### Squarespace
 
 1. Log in to Squarespace and navigate to the page or section where you want to embed the code.
-2. Click `“`Edit`”` on the page content area.
+2. Click `Edit` on the page content area.
 3. Hover over where you want the iframe and click the `+` button to add a block.
 4. Select `Code` from the block options.
 5. In the code block editor, paste your iframe code.
 6. (Optional) Uncheck `Display source` if you only want the result, not the raw code, to appear.
 7. Click `Apply`, then save or publish your page.
 
-**Note**: Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.
+<Note>Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.</Note>
 
 ### Webflow
 
