--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -38,19 +38,16 @@ If you feel that displaying your profile info (image, name and bio) on your page
 
 The `hideProfile` query parameter must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://platform.tutoros.app/amyjones`, then your embed code should be changed to:
 
-<pre>
 ```html
 <iframe
   src="https://platform.tutoros.app/amyjones?hideProfile=true"
   width="100%"
   height="100%"
-  style="border:none; overflow:hidden;"
-  scrolling="yes"
+  style="border: none; overflow: auto;"
   allowfullscreen
   loading="lazy">
 </iframe>
 ```
-</pre>
 
 Below are instructions on how to embed your code in some of the most common website platforms:
 
