--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -49,6 +49,18 @@ The `hideProfile` query parameter must be added to the `src` attribute in your e
 </iframe> 
 ```
 
+```html
+<iframe
+  src="https://google.com"
+  width="100%"
+  height="100%"
+  style="border: none; overflow:auto;"
+  allowfullscreen
+  loading="lazy">
+</iframe>
+```
+
+
 Below are instructions on how to embed your code in some of the most common website platforms:
 
 ### WordPress
