--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -39,7 +39,7 @@ If you feel that displaying your profile info (image, name and bio) on your page
 The `hideProfile` query parameter must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://platform.tutoros.app/amyjones`, then your embed code should be changed to:
 
 ```
-<iframe
+<iframe {2}
   src="https://platform.tutoros.app/amyjones?hideProfile=true"
   width="100%"
   height="100%"
