--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -6,9 +6,9 @@ icon: 'text-size'
 
 In order to receive payments for your lessons, you need to first connect your bank account to TutorOS.
 
-## How to Connect Your Bank Account
+## Online Payments
 
-To connect your bank account, go to the [Billing](https://platform.tutoros.app/billing) section in the app and click the `Connect Bank Account` button:
+To connect your bank account for online payments, go to the [Billing](https://platform.tutoros.app/billing) section in the app and click the `Connect Bank Account` button:
 
 ![Connect Bank Account 1](/images/connect-bank-account-1.png)
 
@@ -16,14 +16,20 @@ You will then see the following pop-up, where you are required to set the countr
 
 ![Connect Bank Account 2](/images/connect-bank-account-2.png)
 
-### Inside UK or EU
-
-If you select the UK or any EU country, you will be redirected to the [Stripe Connect](https://stripe.com/connect) onboarding page. Stripe Connect is the platform that TutorOS uses to manage online lesson payments to tutors in the UK and EU. You will then be prompted to enter your bank account details to complete the setup process.
+You will be redirected to the [Stripe Connect](https://stripe.com/connect) onboarding page. Stripe Connect is the platform that TutorOS uses to manage online lesson payments to tutors. You will then be prompted to enter your bank account details to complete the setup process.
 
 ![Stripe Connect](/images/stripe-connect.png)
 
-### Outside UK or EU
+## Bank Transfer Payments
 
-If you select a country outside the UK or EU, you will be redirected to the Add Bank Details screen, where you can enter your bank information directly. The specific details required will depend on the country you selected. The screenshot below illustrates the process for the United States:
+If you want to allow students to pay after lessons via bank transfer, you can add your bank information to TutorOS and it will be shared with students after each lesson.
+
+To do this, go to the [Billing](https://platform.tutoros.app/billing) section in the app and click the `Add Bank Details` button.
+
+![Add Bank Details](/images/add-bank-details.png)
+
+<Note>You need to complete the online payments onboarding with Stripe before the option to add your bank details for bank transfer payments becomes available.</Note>
+
+You will then you will be brought to the Add Bank Details screen, where you can enter your bank information directly. The specific details required will depend on your chosen country. The screenshot below illustrates the process for the United States:
 
 ![Connect US Bank Account](/images/connect-us-bank-account.png)
