--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -10,16 +10,14 @@ For lessons payments that are made inside TutorOS, your balance will accumulate 
 
 ### Viewing Payouts
 
-If you are using a UK or EU bank account, you can view your payouts in your Stripe Connect account:
+You can view your payouts in your Stripe Connect account:
 
 ![Stripe Payouts](/images/stripe-payouts.png)
-
-If you are using a bank account outside the UK or EU, you can view your payouts in the [Billing](https://platform.tutoros.app/billing) section in TutorOS.
 
 ## Frequently Asked Questions (FAQ)
 
 **1. How long do payments take to reach my bank account?**
-Payouts to US, Canada, UK and EU bank accounts arrive the same day. For other countries, delivery typically takes 1-3 days.
+Payouts to US, UK and EU bank accounts arrive the same day. For all other countries, delivery typically takes 1-3 days.
 
 **2. Am I charged a fee for each payout?**
 No. You will receive the full amount of your balance each time it is transferred to your bank account.
