--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -8,7 +8,7 @@ In order to receive payments for your lessons, you need to first connect your ba
 
 ## Online Payments
 
-To connect your bank account for online payments, go to the [Billing](https://platform.tutoros.app/billing) section in the app and click the `Connect Bank Account` button:
+To connect your bank account for online lesson payments, go to the [Billing](https://platform.tutoros.app/billing) section in the app and click the `Connect Bank Account` button:
 
 ![Connect Bank Account 1](/images/connect-bank-account-1.png)
 
