--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -7,6 +7,12 @@ icon: 'text-size'
 ### How Payouts Work
 
 For lessons payments that are made inside TutorOS, your balance will accumulate and is paid out (i.e. transferred to your connected bank account) daily.
+However, [Stripe](https://stripe.com/connect) (our payment provider) requires a brief “rolling” hold period before those funds transfer to your bank. The exact hold period depends on where your bank account is located:
+
+- **United States**: Daily payouts, funds available 2 days after after a lesson payment is made.
+- **UK & EU Countries**: Daily payouts, funds available 7 days after after a lesson payment is made.
+- **UAE**: Daily payouts, funds available 7 days after after a lesson payment is made.
+- **All Other Countries**: Daily payouts, funds available 3 days after a lesson payment is made.
 
 ### Viewing Payouts
 
