--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -23,7 +23,7 @@ You can view your payouts in your Stripe Connect account:
 ## Frequently Asked Questions (FAQ)
 
 **1. How long do payments take to reach my bank account?**
-Payouts to US, UK and EU bank accounts arrive the same day. For all other countries, delivery typically takes 1-3 days.
+Payouts to US, UK, EU and UAE bank accounts arrive the same day. For all other countries, delivery typically takes 1-3 days.
 
 **2. Am I charged a fee for each payout?**
 No. You will receive the full amount of your balance each time it is transferred to your bank account.
