--- a/faq/general-questions.mdx
+++ b/faq/general-questions.mdx
@@ -4,10 +4,8 @@ description: 'Answers to other general questions.'
 icon: 'text-size'
 ---
 
-**1. Are my students visible to other tutors?**
-
+**1. Are my students visible to other tutors?**<br>
 No, absolutely not. TutorOS is not a marketplace for connecting students with tutors. It is a platform designed for private tutors to manage lessons with their own students.
 
-**2. What types of lessons are supported?**
-
+**2. What types of lessons are supported?**<br>
 We currently support one-on-one lessons. Group lesson support is coming soon!
