--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -16,7 +16,7 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 ![New Lesson Template 1](/images/new-template-1.png)
 
-The first step is to set the name, category, and language of instruction for this template.
+The first step is to set the `Name`, `Description`, `Category`, and `Language of Instruction` for this template.
 
 The category options are:
 
@@ -25,7 +25,7 @@ The category options are:
 - Science
 - Music
 
-The language of instruction is the language in which the lessons will be conducted. For example, if you are teaching Spanish and delivering the lessons in English, select English. 
+The Language of Instruction is the language in which the lessons will be conducted. For example, if you are teaching Spanish and delivering the lessons in English, select English. 
 
 ## 2. Set Price & Duration
 
