--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -18,7 +18,7 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 The first step is to set the `Name`, `Description`, `Category`, and `Language of Instruction` for this template.
 
-The category options are:
+The Category options are:
 
 - Language Learning
 - Maths
@@ -31,11 +31,11 @@ The Language of Instruction is the language in which the lessons will be conduct
 
 ![New Lesson Template 2](/images/new-template-2.png)
 
-The second step is to set the price and duration for this template.
+The second step is to set the `Price` and `Duration` for this template.
 
-The price is how much the student needs to pay for a lesson from this template.
+The Price is how much the student needs to pay for a lesson from this template.
 
-The duration is how long each lesson lasts. The duration options are:
+The Duration is how long each lesson lasts. The duration options are:
 
 - 30 minutes.
 - 40 minutes.
