--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -10,7 +10,7 @@ To create a new lesson template, go to the [Templates](https://platform.tutoros.
 
 ![Create New Lesson Template](/images/create-new-template.png)
 
-You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy, cancellation policy, etc. for this new template.
+You will then be brought to the New Lesson Template screen, where you can set the name, description, category, price, duration, payment policy, cancellation policy, etc. for this new template.
 
 ## 1. Enter Setup Details
 
