--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -17,9 +17,13 @@ If the student cancels a lesson, then depending on the lesson [cancellation poli
 - Notified that a partial lesson payment is now due.
 - Notified that no payment is due.
 
+If the lesson was booked from a lesson package, then the remaining lesson count for that package will be increased by one.
+
 ### Tutor Cancellations
 
 If you cancel a lesson, then if the student has already paid, they will be sent a full refund. If they have not already paid, then no payment for the lesson will be due.
+
+If the lesson was booked from a lesson package, then the remaining lesson count for that package will be increased by one.
 
 ## How to Cancel a Lesson
 
