--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -20,7 +20,7 @@ Additionally, you can invite students to your page by clicking the `Invite Stude
 
 ![Profile Page 2](/images/profile-page-2.png)
 
-Clicking your profile page link will open your profile, displaying your details along with the [lesson templates](/templates/lesson-template-intro) you have created in your account:
+Clicking your profile page link will open your profile, displaying your details along with the [lesson templates](/templates/lesson-template-intro) and [lesson packages](/packages/lesson-packages-intro) you have created in your account:
 
 ![Profile Page 3](/images/profile-page.png)
 
