--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -8,11 +8,11 @@ icon: 'text-size'
 
 ### Student Cancellations
 
-If the student cancels a lesson, then depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and when they cancel, one of the following will happen:
+If the student cancels a lesson, then depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and when they cancel, one of the following will apply:
 
-- Issued a full refund.
-- Issued a partial refund.
-- Issued no refund.
+- A full refund will be issued.
+- A partial refund will be issued.
+- No refund will be issued.
 - Notified that the full lesson payment is now due.
 - Notified that a partial lesson payment is now due.
 - Notified that no payment is due.
