--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -21,9 +21,11 @@ If the lesson was booked from a lesson package, then the remaining lesson count 
 
 ### Tutor Cancellations
 
-If you cancel a lesson, then if the student has already paid, they will be sent a full refund. If they have not already paid, then no payment for the lesson will be due.
+If you cancel a lesson, then one of the following will apply:
 
-If the lesson was booked from a lesson package, then the remaining lesson count for that package will be increased by one.
+- If the student has already paid, they will be sent a full refund. 
+- If the student has not already paid, then no payment for the lesson will be due.
+- If the lesson was booked from a lesson package, then the remaining lesson count for that package will be increased by one.
 
 ## How to Cancel a Lesson
 
