--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -8,16 +8,11 @@ icon: 'text-size'
 
 ### Student Cancellations
 
-If the student cancels a lesson, then depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and when they cancel, one of the following will apply:
+If the student cancels a lesson, the outcome will depend on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy), the timing of the cancellation, and whether the lesson was booked as part of a lesson package. Based on these factors, one of the following will apply:
 
-- A full refund will be issued.
-- A partial refund will be issued.
-- No refund will be issued.
-- Notified that the full lesson payment is now due.
-- Notified that a partial lesson payment is now due.
-- Notified that no payment is due.
-
-If the lesson was booked from a lesson package, then the remaining lesson count for that package will be increased by one.
+- A full refund, partial refund, or no refund will be issued.
+- The student will be notified whether the full lesson payment, a partial payment, or no payment is due.
+- If the lesson was booked as part of a lesson package, the remaining lesson count for that package will be increased by one.
 
 ### Tutor Cancellations
 
@@ -25,7 +20,7 @@ If you cancel a lesson, then one of the following will apply:
 
 - If the student has already paid, they will be sent a full refund. 
 - If the student has not already paid, then no payment for the lesson will be due.
-- If the lesson was booked from a lesson package, then the remaining lesson count for that package will be increased by one.
+- If the lesson was booked as part of a lesson package, the remaining lesson count for that package will be increased by one.
 
 ## How to Cancel a Lesson
 
