--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -8,7 +8,7 @@ icon: 'text-size'
 
 ### Student Cancellations
 
-If the student cancels a lesson, the outcome will depend on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy), the timing of the cancellation, and whether the lesson was booked as part of a lesson package. Based on these factors, one of the following will apply:
+If the student cancels a lesson, the outcome will depend on the lesson [payment & cancellation policy](/templates/create-new-template#3-define-policies), the timing of the cancellation, and whether the lesson was booked as part of a lesson package. Based on these factors, one of the following will apply:
 
 - A full refund, partial refund, or no refund will be issued.
 - The student will be notified whether the full lesson payment, a partial payment, or no payment is due.
