--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,7 +21,12 @@ This guide is broken into the following sections:
     icon="folder"
     href="templates/lesson-template-intro"
   >
-    Learn what templates are and how to create them.
+  <Card
+    title="Lesson Packages"
+    icon="box-open"
+    href="templates/lesson-template-intro"
+  >
+    Learn what packages are and how to create them.
   </Card>
   <Card
     title="Schedule"
