--- a/templates/lesson-template-intro.mdx
+++ b/templates/lesson-template-intro.mdx
@@ -10,7 +10,7 @@ A Lesson Template defines details like the name, price, duration, payment policy
 
 When students book a lesson for a template, they are booking an individual session created from this template.
 
-When you create a new template, it will be available on your [profile page](/profile/profile-page) for students to book individual lessons for that template.
+When you create a new template, it will be available in the `Single Lessons` section on your [profile page](/profile/profile-page) for students to book individual lessons for that template.
 
 ### Example
 
