--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,6 +21,8 @@ This guide is broken into the following sections:
     icon="folder"
     href="templates/lesson-template-intro"
   >
+    Learn what templates are and how to create them.
+  </Card>
   <Card
     title="Lesson Packages"
     icon="box-open"
