--- a/packages/lesson-package-intro.mdx
+++ b/packages/lesson-package-intro.mdx
@@ -7,7 +7,9 @@ icon: 'text-size'
 ### What is a Lesson Package?
 
 A Lesson Package allows you to offer multiple lessons as a bundled purchase, providing students with a conveniant way to
-purchase multiple lessons at once. Instead of booking individual lessons one at a time, students can purchase a package that grants them a set number of lessons for a specific Lesson Template.
+purchase multiple lessons at once.
+
+Instead of booking individual lessons one at a time, students can purchase a package that grants them a set number of lessons for a specific Lesson Template.
 
 Each Lesson Package is tied to a Lesson Template, and you can create more than one package for each of your templates.
 
@@ -15,10 +17,15 @@ When you create a new template, it will be available in the `Lesson Packages` se
 
 ### Example
 
-Let's say you have created one template called `1-hour Spanish Lesson`, you can then create two new packages with the following settings:
+Let's say you have created one template called `1-hour Spanish Lesson`, you can then create two new packages for this template with the following settings:
 
-1. Lesson Count = 5. Price = €120.00
-2. Lesson Count = 10. Price = €250.00
+1. Lesson Count = 5. Price = €120.00.
+2. Lesson Count = 10. Price = €250.00.
+
+|               | **Lesson Count** | **Price** |
+|---------------|------------------|-----------|
+| Package 1     | 5                | €120.00   |
+| Package 2     | 10               | €250.00   |
 
 ![Lesson Packages](/images/lesson-packages.png)
 
