--- a/packages/lesson-package-intro.mdx
+++ b/packages/lesson-package-intro.mdx
@@ -19,13 +19,10 @@ When you create a new template, it will be available in the `Lesson Packages` se
 
 Let's say you have created one template called `1-hour Spanish Lesson`, you can then create two new packages for this template with the following settings:
 
-1. Lesson Count = 5. Price = €120.00.
-2. Lesson Count = 10. Price = €250.00.
-
 |               | **Lesson Count** | **Price** |
 |---------------|------------------|-----------|
-| Package 1     | 5                | €120.00   |
-| Package 2     | 10               | €250.00   |
+| `Package 1`     | 5                | €120.00   |
+| `Package 2`     | 10               | €250.00   |
 
 ![Lesson Packages](/images/lesson-packages.png)
 
