--- a/packages/lesson-package-intro.mdx
+++ b/packages/lesson-package-intro.mdx
@@ -11,7 +11,7 @@ purchase multiple lessons at once.
 
 Instead of booking individual lessons one at a time, students can purchase a package that grants them a set number of lessons for a specific Lesson Template.
 
-Each Lesson Package is tied to a Lesson Template, and you can create more than one package for each of your templates.
+Each Lesson Package is linked to a specific Lesson Template, and you can create more than one package for each of your templates.
 
 When you create a new template, it will be available in the `Lesson Packages` section on your [profile page](/profile/profile-page) for students to purchase.
 
