--- a/packages/lesson-package-intro.mdx
+++ b/packages/lesson-package-intro.mdx
@@ -13,7 +13,7 @@ Instead of booking individual lessons one at a time, students can purchase a pac
 
 Each Lesson Package is linked to a specific Lesson Template, and you can create more than one package for each template.
 
-When you create a new package, it will be available in the `Lesson Packages` section on your [profile page](/profile/profile-page) for students to purchase.
+When you create a new package, it will be available in the `Lesson Packages` section on your [profile page](/profile/profile-page) for students to buy.
 
 ### Example
 
