--- a/packages/create-new-package.mdx
+++ b/packages/create-new-package.mdx
@@ -5,3 +5,33 @@ icon: 'text-size'
 ---
 
 ## How to Create a Lesson Package
+
+To create a new lesson template, go to the [Packages](https://platform.tutoros.app/lesson-packages) section in the app, and click the `New Lesson Package` button:
+
+![Create New Lesson Package](/images/new-lesson-package-1.png)
+
+You will then be brought to the New Lesson Package screen, where you can select the template that this package is for and set the description, lesson count, price & validity period for this new package.
+
+## 1. Enter Setup Details
+
+![New Lesson Package 1](/images/new-lesson-package-2.png)
+
+The first step is to select the lesson template for this package and set the `Description` & `Lesson Count`.
+
+## 2. Set Price & Validity
+
+![New Lesson Package 2](/images/new-lesson-package-3.png)
+
+The second step is to set the `Price` and `Validity Period` for this package.
+
+The currency for the price will be set to the currency of the lesson template you selected in Step 1.
+
+The Validity Period is the timeframe within which the student must use all lessons in this package before it expires. The options are:
+
+- 1 month
+- 3 months.
+- 6 months.
+- 1 year.
+- Forever (i.e. no expiry)
+
+Finally, click the `Create package` button to create the package.
