--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -86,3 +86,5 @@ amy@example.com
 john.smith@example.com
 sarah.wilson123@example.com
 ```
+
+Finally, click the `Create template` button to create the template.
