--- a/packages/create-new-package.mdx
+++ b/packages/create-new-package.mdx
@@ -24,14 +24,14 @@ The first step is to select the lesson template for this package and set the `De
 
 The second step is to set the `Price` and `Validity Period` for this package.
 
-The currency for the price will be set to the currency of the lesson template you selected in Step 1.
+The currency for the Price will be set to the currency of the lesson template you selected in Step 1.
 
 The Validity Period is the timeframe within which the student must use all lessons in this package before it expires. The options are:
 
 - 1 month
-- 3 months.
-- 6 months.
-- 1 year.
+- 3 months
+- 6 months
+- 1 year
 - Forever (i.e. no expiry)
 
 Finally, click the `Create package` button to create the package.
