--- a/packages/manage-packages.mdx
+++ b/packages/manage-packages.mdx
@@ -5,3 +5,25 @@ icon: 'text-size'
 ---
 
 ### View Your Packages
+
+To view your lesson packages, go to the [Packages](https://platform.tutoros.app/lesson-packages) section in the app:
+
+![Lesson Packages](/images/lesson-packages.png)
+
+To open the action menu for a package, click the gear icon in the top right corner of the package box. This will show the options to edit, archive or delete a package:
+
+![Lesson Package Actions](/images/lesson-packages-action.png)
+
+### Edit Package
+
+To edit a package, click on the `Edit package` link, which will take you to the Edit Package screen. You can edit all parameters for a package apart from the template it is linked to. If you update the lesson count or validity period, the updated values will only apply to new purchases. The lesson count/validty period for all previous purchases will remain unchanged.
+
+### Archive Package
+
+To archive a package, click on the `Archive package` link. Archiving a package will hide it from your profile page, so students will no longer be able to buy this package.
+
+### Delete Package
+
+To delete a package, click on the `Delete package` link.
+
+<Note>Packages that have been purchased at least once can only be archived but not deleted. </Note>
