--- a/templates/manage-templates.mdx
+++ b/templates/manage-templates.mdx
@@ -16,7 +16,7 @@ To open the action menu for a template, click the gear icon in the top right cor
 
 ### Edit Template
 
-To edit a template, click on the `Edit template` link, which will take you to the Edit Template screen. You can edit all parameters for a template apart from its currency.
+To edit a template, click on the `Edit template` link, which will take you to the Edit Template screen. You can edit all settings for a template apart from its currency.
 
 ### Archive Template
 
