--- a/packages/manage-packages.mdx
+++ b/packages/manage-packages.mdx
@@ -18,7 +18,9 @@ To open the action menu for a package, click the gear icon in the top right corn
 
 To edit a package, click on the `Edit package` link, which will take you to the Edit Package screen.
 
-You can edit all parameters for a package apart from the template it is linked to. If you update the lesson count or validity period, the updated values will only apply to new purchases. The lesson count/validty period for all previous purchases will remain unchanged.
+You can edit all settings for a package apart from the template it is linked to.
+
+If you update the lesson count or validity period, the updated values will only apply to new purchases. The lesson count/validty period for all previous purchases will remain unchanged.
 
 ### Archive Package
 
