--- a/payments/payments-intro.mdx
+++ b/payments/payments-intro.mdx
@@ -16,7 +16,10 @@ Students are required to pay at the time of booking, so lessons cannot be schedu
 ![Online Payment](/images/online-payment.png)
 
 2. **After Lesson.**
-Payment is required from the student after the lesson. They can make the payment in TutorOS using debit/credit cards from any country or outside the app through direct bank transfer (including Revolut, Venmo, etc.) or cash. Your bank details will be emailed to the student once the lesson ends:
+Payment is required from the student after the lesson. They can make the payment in TutorOS using debit/credit cards from any country or outside the app through direct bank transfer (including Revolut, Venmo, etc.) or cash. The student will be sent an email after the lesson notifying them that payment is now due:
 
-![Payment Due](/images/payment-due-email.png)
+![Payment Due 1](/images/payment-due-email-1.png)
 
+Your bank details are shown to the student in the app:
+
+![Payment Due 2](/images/payment-due-email-2.png)
