--- a/introduction.mdx
+++ b/introduction.mdx
@@ -63,7 +63,7 @@ This guide is broken into the following sections:
   <Card
     title="FAQ"
     icon="question"
-    href="faq/zoom-account"
+    href="faq/general-questions"
   >
     Answers to frequently asked questions.
   </Card>
