--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,13 +1,13 @@
 ---
 title: Introduction
-description: 'Welcome to TutorOS, the management platform for private tutors.'
+description: 'Welcome to TutorOS, the all-in-one platform for private tutors.'
 ---
 
 This is your guide to getting started with TutorOS.
 
 ## What is TutorOS?
 
-TutorOS is an online platform that saves you time, increases your income, and allows you to provide more engaging & impactful lessons to your students.
+TutorOS is an online platform that allows tutors to start, run, and scale their tutoring business—while saving time and engaging students.
 
 With TutorOS, you can manage your lessons, set your schedule, take online payments, and much more!
 
