--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -36,11 +36,11 @@ If you feel that displaying your profile info (image, name and bio) on your page
 
 ![Profile Page 5](/images/profile-page-5.png)
 
-The `hideProfile` query parameter must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://platform.tutoros.app/amyjones`, then your embed code should be changed to:
+The `hideProfile` query parameter must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://tutoros.app/amyjones`, then your embed code should be changed to:
 
 ```html {2}
 <iframe
-  src="https://platform.tutoros.app/amyjones?hideProfile=true"
+  src="https://tutoros.app/amyjones?hideProfile=true"
   width="100%"
   height="100%"
   style="border: none; overflow: auto;"
