--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,7 +7,7 @@ This is your guide to getting started with TutorOS.
 
 ## What is TutorOS?
 
-TutorOS is an online platform that allows tutors to start, run, and scale their tutoring business—while saving time and engaging students.
+TutorOS is an online platform that allows tutors to start, run, and grow their tutoring business—while saving time and engaging students.
 
 With TutorOS, you can manage your lessons, set your schedule, take online payments, and much more!
 
