--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,7 +7,7 @@ This is your guide to getting started with TutorOS.
 
 ## What is TutorOS?
 
-TutorsOS empowers private tutors to succeed by offering a platform that has everything they need to build & grow their business – all in one place.
+TutorsOS is a modern, online platform that provides everything private tutors need to build & grow their business – all in one place.
 
 With TutorOS, you can manage your lessons, set your schedule, take online payments, and much more!
 
