--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -28,7 +28,7 @@ Payouts to US, UK, EU and UAE bank accounts arrive the same day. For all other c
 **2. Am I charged a fee for each payout?**
 No. You will receive the full amount of your balance each time it is transferred to your bank account.
 
-**3. What countries are supported for tutor payouts?
+**3. What countries are supported for tutor payouts?**
 You can connect bank accounts for payouts from the following countries:
 - 🇺🇸 United States  
 - 🇨🇦 Canada  
